[package]
name = "ssa-comp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "0.13.1"
lrlex = "0.13.1"
lrpar = "0.13.1"

[dependencies.parser_defs]
path = "parser"

[build-dependencies]
cfgrammar = "0.13.1"
lrlex = "0.13.1"
lrpar = "0.13.1"

[build-dependencies.parser_defs]
path = "parser"

[features]

print-cfgs = []